--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-  font-family: Roboto;
+  font-family: Roboto, "Arial", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -41,6 +41,8 @@ body {
 
   width: 100%;
 
+  gap: 20px;
+
   padding: 0 5px;
 }
 
@@ -59,4 +61,13 @@ a:hover {
 
 a {
   text-decoration: none;
+  display: contents;
+}
+
+p,
+h3 {
+  padding: 0;
+  margin: 0;
+
+  letter-spacing: -0.2px;
 }
